--- a/src/component/catologo/_catologo.scss
+++ b/src/component/catologo/_catologo.scss
@@ -5,6 +5,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100vw;
+  background: #546c75;
 }
 
 .container-catalogo {
@@ -17,37 +18,25 @@
 .columna1 {
   height: 100vh;
   width: 23rem;
-  background: #ada996; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #eaeaea,
-    #dbdbdb,
-    #f2f2f2,
-    #ada996
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #eaeaea,
-    #dbdbdb,
-    #f2f2f2,
-    #ada996
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #ffffff;
 
   overflow-y: hidden;
 }
 
 .containerClass {
-  width: 98%;
+  width: 95%;
   height: auto;
   line-height: 1.1rem;
   text-align: justify;
+
+  background: #fff;
 
   border-radius: 10px 10px 10px 10px;
   margin: auto;
   margin-top: 25px;
 
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 15px -7px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, #96acad 0px -2px 3px 0px inset;
+    rgba(150, 130, 130, 0.3) 0px 30px 60px -30px, #f8f8f8 0px -2px 3px 0px inset;
 
   // box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
   //   rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, #a08a4e 0px -2px 6px 0px inset;
@@ -57,7 +46,7 @@
   height: 915px;
   padding: 1rem 4rem 3rem 3rem;
   color: rgb(5, 5, 5);
-  line-height: 18px;
+  line-height: 15px;
 }
 
 .container-text h1 {
