--- a/src/component/main1/_main1.scss
+++ b/src/component/main1/_main1.scss
@@ -1,6 +1,7 @@
 .containerImagen {
   max-width: 100vw;
-  max-height: 100vh;
+  height: auto;
+  max-height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
