--- a/src/component/main2/_main2.scss
+++ b/src/component/main2/_main2.scss
@@ -1,43 +1,49 @@
-.background-section-main3 {
-  background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-  background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+.background-section-main2 {
+  background: url(../img/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
+  background: url(../img/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   object-fit: cover;
   position: relative;
   width: 100%;
+  min-height: 55vw;
+  height: auto;
+  margin: 0;
+  padding: 0;
+}
+
+.container__seccion-2 {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
+  padding: 4rem;
   height: auto;
 }
 
-.container__seccion-3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: auto;
-  padding: 8rem;
-}
-
-.container__seccion-3 p {
-  max-width: 90%;
+.container__seccion-2 p {
+  max-width: 40vw;
+  width: 100%;
+  height: auto;
   text-align: justify;
-  font-size: 1.41vw;
+  font-size: 1.44vw;
+  margin: auto;
 }
 
-.container__seccion-3 h3 {
+.container__seccion-2 h3 {
   font-size: 1.78vw;
 }
 
-.contenedor-img3 {
-  max-width: 100%;
-  max-height: 70%;
-}
-
-.imagen__main3 {
+.imagen__main2 {
+  max-width: 40vw;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 5px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  margin: auto;
 }
 
 .texto__main__2 {
@@ -53,260 +59,53 @@
 
 // RESPONSIVE
 
-@media (max-width: 400.98px) {
-  .background-section-main3 {
-    background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-    background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-position: bottom;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 35rem;
-  }
-
-  .container__seccion-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 10rem;
-    padding: 2rem;
-    margin: auto;
-  }
-
-  .container__seccion-3 p {
-    margin-top: 8rem;
-    max-width: 100%;
-    text-align: justify;
-    font-size: 2.8vw;
-    margin-bottom: 0.5rem;
-  }
-
-  .container__seccion-3 h3 {
-    font-size: 1.78vw;
-  }
-
-  .contenedor-img3 {
-    max-width: 100%;
-    max-height: 70%;
-  }
-
-  .texto__main__2 {
-    margin-top: 1rem;
-    padding-top: 2rem;
-  }
-
-  .texto__main__2 h3 {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 5vw;
-    margin-bottom: 5rem;
-  }
-}
-
-@media screen and (min-width: 401px) and (max-width: 535.98px) {
-  .background-section-main3 {
-    background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-    background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-position: bottom;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 38rem;
-  }
-
-  .container__seccion-3 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 10rem;
-    padding: 2rem;
-    margin: auto;
-  }
-
-  .container__seccion-3 p {
-    margin-top: 11rem;
-    max-width: 100%;
-    text-align: justify;
-    font-size: 2.8vw;
-    margin-bottom: 1.5rem;
-  }
-
-  .container__seccion-3 h3 {
-    font-size: 1.78vw;
-  }
-
-  .contenedor-img3 {
-    max-width: 100%;
-    max-height: 70%;
-  }
-
-  .texto__main__2 {
-    margin-top: 1rem;
-    padding-top: 2rem;
-  }
-
-  .texto__main__2 h3 {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 2.78vw;
-    margin-bottom: 5rem;
-  }
-}
-
-@media screen and (min-width: 536px) and (max-width: 577.8px) {
-}
-
-@media screen and (min-width: 578px) and (max-width: 666.98px) {
-}
-
-@media screen and (min-width: 667px) and (max-width: 735px) {
-}
-
-@media screen and (min-width: 736px) and (max-width: 767px) {
-}
-
-@media screen and (min-width: 768px) and (max-width: 833.99px) {
-  .background-section-main3 {
-    background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-    background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 31rem;
-  }
-
-  .container__seccion-3 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 10rem;
-    padding: 2rem;
-    margin: auto;
-  }
-
-  .container__seccion-3 p {
-    max-width: 100%;
-    text-align: justify;
-    font-size: 1.41vw;
-    margin-bottom: 1.5rem;
-    padding: 1rem;
-  }
-
-  .contenedor-img3 {
-    max-width: 100%;
-    max-height: 70%;
-  }
-
-  .texto__main__2 {
-    margin-top: 1rem;
-    padding-top: 2rem;
-  }
-
-  .texto__main__2 h3 {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 2.78vw;
-    margin-bottom: 5rem;
-  }
-}
-
-@media screen and (min-width: 834px) and (max-width: 895.98px) {
-  .background-section-main3 {
-    background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-    background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 31rem;
-  }
-
-  .container__seccion-3 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 10rem;
-    padding: 2rem;
-    margin: auto;
-  }
-
-  .container__seccion-3 p {
-    max-width: 100%;
-    text-align: justify;
-    font-size: 1.57vw;
-    margin-bottom: 1.5rem;
-    padding-right: 1rem;
-  }
-
-  .contenedor-img3 {
-    max-width: 100%;
-    max-height: 70%;
-  }
-
-  .texto__main__2 {
-    margin-top: 1rem;
-    padding-top: 2rem;
-  }
-
-  .texto__main__2 h3 {
-    text-align: center;
-    font-family: sans-serif;
-    font-weight: 900;
-    font-size: 2.78vw;
-    margin-bottom: 5rem;
-  }
-}
-
-@media screen and (min-width: 896px) and (max-width: 1023.98px) {
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1239.98px) {
-  .background-section-main3 {
-    background: url(../../image/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
-    background: url(../../image/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+@media screen and (min-width: 200px) and (max-width: 638.98px) {
+  .background-section-main2 {
+    background: url(../img/background_property_month.jpg); /* Chrome 10-25, Safari 5.1-6 */
+    background: url(../img/background_property_month.jpg); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     object-fit: cover;
     position: relative;
     width: 100%;
-    height: 35rem;
+    min-height: 25vw;
+    height: auto;
+    margin-top: -100px;
   }
 
-  .container__seccion-3 {
+  .container__seccion-2 {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin: auto;
-    padding: 4rem;
+    height: auto;
   }
 
-  .container__seccion-3 p {
-    max-width: 90%;
+  .container__seccion-2 p {
+    max-width: 100vw;
+    width: 100%;
+    height: auto;
     text-align: justify;
-    font-size: 1.41vw;
+    font-size: 1.44vw;
+    margin: auto;
+    padding-bottom: 1rem;
+    margin-top: -3.2rem;
   }
 
-  .container__seccion-3 h3 {
-    font-size: 1.78vw;
+  .container__seccion-2 h3 {
+    font-size: 5.78vw;
   }
 
-  .contenedor-img3 {
-    max-width: 100%;
-    max-height: 70%;
-  }
-
-  .imagen__main3 {
+  .imagen__main2 {
+    max-width: 100vw;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+    margin: auto;
   }
 
   .texto__main__2 {
@@ -319,10 +118,4 @@
     font-weight: 900;
     font-size: 2.78vw;
   }
-}
-
-@media screen and (min-width: 1240px) and (max-width: 1379.98px) {
-}
-
-@media screen and (min-width: 1380px) and (max-width: 1450px) {
 }
